--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.18",
     "autoprefixer": "^10.4.24",
+    "elm": "^0.19.1-6",
     "elm-live": "^4.0.2",
     "elm-test": "^0.19.1-revision17",
     "postcss": "^8.5.6",
